switched test plug-in