@@ -452,12 +452,6 @@
 			</properties> 
 		</profile>
 		<profile>
-			<id>noCodeCoverage</id>
-			<properties>
-				<coverageAgent></coverageAgent>
-			</properties> 
-		</profile>
-		<profile>
 			<id>codeCoverage</id>
 			<properties>
 				<jacoco.version>0.5.6.201201232323</jacoco.version>
@@ -480,20 +474,46 @@
 				<sonar.jacoco.itReportPath>${jacoco.it.destFile}</sonar.jacoco.itReportPath>
 			</properties> 
 			<build>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-surefire-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
 				<plugins>
 					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>test</id>
+								<phase>test</phase>
+								<configuration>
+									<argLine>${coverageAgent}</argLine>
+									<testClassesDirectory>${project.build.outputDirectory}</testClassesDirectory>
+									<excludes>
+									</excludes>
+								</configuration>
+								<goals>
+									<goal>test</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>			
+					<!--plugin>
 						<groupId>org.eclipse.tycho</groupId>
 						<artifactId>tycho-surefire-plugin</artifactId>
 						<version>${tycho-version}</version>
 						<configuration>
-							<argLine>${coverageAgent} -Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
+							<argLine>${coverageAgent}</argLine>
 							<useUIHarness>false</useUIHarness>
 							<includes>
 								<include>**/*Test.java</include>
 							</includes>
 							<forkedProcessTimeoutInSeconds>600</forkedProcessTimeoutInSeconds>
 						</configuration>
-					</plugin>
+					</plugin-->
 					<plugin>
 						<groupId>org.jacoco</groupId>
 						<artifactId>jacoco-maven-plugin</artifactId>
